--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "storybook-vue3",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@storybook/addon-actions": "^6.3.9",
-    "@storybook/addon-essentials": "^6.3.9",
-    "@storybook/addon-links": "^6.3.9",
-    "@storybook/vue3": "^6.3.9",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-loader": "^8.2.2",
-    "vue-loader": "^16.8.1"
-  }
+    "name": "storybook-vue3",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "sb": "start-storybook -p 6006",
+        "build-sb": "build-storybook"
+    },
+    "dependencies": {
+        "core-js": "^3.6.5",
+        "vue": "^3.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.15.5",
+        "@storybook/addon-actions": "^6.3.9",
+        "@storybook/addon-essentials": "^6.3.9",
+        "@storybook/addon-links": "^6.3.9",
+        "@storybook/vue3": "^6.3.9",
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "@vue/compiler-sfc": "^3.0.0",
+        "babel-loader": "^8.2.2",
+        "vue-loader": "^16.8.1"
+    }
 }
